# Auralith-Data-Pipeline

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.pypi.md  mypy.ini  pyproject.toml  setup.sh
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: auto-tag.yml  ci.yml  data-pipeline.yml  data_pipeline.yml  labeler.yml  release-drafter.yml  release.yml
configs/: distributed.yaml  production.yaml
docker/kubernetes/: argo-workflow.yaml
docker/kubernetes/helm/: Chart.yaml  values.yaml
docker/kubernetes/helm/templates/: _helpers.tpl  job.yaml  pvc.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DISTRIBUTED_PROCESSING.md  GITHUB_ACTIONS_PIPELINE.md  SECURITY.md
examples/: distributed_example.py
requirements/: base.txt  cloud.txt  dev.txt  full.txt
scripts/: bump-version.sh  collect.py  download_training_data.py  train_tokenizer.py
src/auralith_pipeline/: __init__.py  cli.py  pipeline.py
src/auralith_pipeline/config/: __init__.py  pipeline_config.py
src/auralith_pipeline/distributed/: __init__.py  client.py  config.py  coordinator.py  pipeline.py  ray_runner.py  state.py  strategies.py  worker.py
src/auralith_pipeline/extraction/: __init__.py  compound.py  extractor.py
src/auralith_pipeline/preprocessing/: __init__.py  code_chunker.py  compliance.py  deduplication.py  preprocessor.py  quality.py  synthetic.py
src/auralith_pipeline/security/: __init__.py  audit.py  data_sanitizer.py  pii_scrubber.py  privacy_config.py
src/auralith_pipeline/sharding/: __init__.py  shard_writer.py
src/auralith_pipeline/sources/: __init__.py  code.py  compound.py  data_sources.py  video.py
src/auralith_pipeline/spark/: __init__.py  config.py  runner.py  transforms.py
src/auralith_pipeline/storage/: __init__.py  backends.py
src/auralith_pipeline/tokenization/: __init__.py  bpe_tokenizer.py  multimodal_tokenizer.py  tokenizer.py  video_tokenizer.py
src/auralith_pipeline/utils/: __init__.py  file_types.py  helpers.py  tracking.py
tests/: test_cli.py  test_code_modality.py  test_compound.py  test_distributed.py  test_e2e_schema.py  test_pipeline.py  test_security.py  test_tokenization.py
