[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auralith-data-pipeline"
version = "2.0.0"
description = "Production-grade data collection and processing pipeline for training LLMs and multimodal AI"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "AuralithAI", email = "contact@auralith.ai" }
]
keywords = [
    "data-pipeline",
    "machine-learning",
    "nlp",
    "llm",
    "data-processing",
    "tokenization",
    "multimodal"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

dependencies = [
    # Core — upper bounds guard against breaking API changes in major versions
    "numpy>=1.24.0,<3.0",
    "scipy>=1.11.0,<2.0",
    "tqdm>=4.65.0,<5.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.31.0,<3.0",
    "datasets>=2.14.0,<4.0",
    "huggingface-hub>=0.19.0,<2.0",
    "safetensors>=0.4.0,<1.0",
    "sentencepiece>=0.1.99,<1.0",
    "xxhash>=3.4.0,<4.0",
    "datasketch>=1.6.0,<2.0",
    "ftfy>=6.1.0,<7.0",
    "langdetect>=1.0.9,<2.0",
    "rich>=13.0.0,<14.0",
    "click>=8.1.0,<9.0",
    "Pillow>=10.0.0,<12.0",   # >=9.1 required for Image.Resampling.LANCZOS
    "soundfile>=0.12.0,<1.0",
]

[project.optional-dependencies]
# Document processing (PDF, Word, Excel, PowerPoint)
pdf = [
    "pdfplumber>=0.10.0,<1.0",
    "python-docx>=1.0.0,<2.0",
    "python-pptx>=0.6.23,<1.0",
    "openpyxl>=3.1.0,<4.0",
]
# Cloud storage backends (AWS S3, Google Cloud Storage, Azure Blob)
cloud = [
    "boto3>=1.28.0,<2.0",
    "google-cloud-storage>=2.10.0,<3.0",
    "azure-storage-blob>=12.19.0,<13.0",
]
# Multimodal AI (advanced features: video, ML models) - WARNING: Large dependencies (~2-3 GB with PyTorch)
multimodal = [
    "librosa>=0.10.0,<1.0",
    "opencv-python>=4.8.0,<5.0",
    "timm>=0.9.0,<2.0",  # Includes PyTorch - very large!
    "decord>=0.6.0,<1.0",
]
# Advanced quality & deduplication
quality = [
    "transformers>=4.35.0,<5.0",
    "sentence-transformers>=2.2.0,<4.0",
    "faiss-cpu>=1.7.4,<2.0",
]
# Experiment tracking
tracking = [
    "mlflow>=2.9.0",
    "wandb>=0.16.0",
]
# Distributed processing
distributed = [
    "ray[default]>=2.9.0",
    "psutil>=5.9.0",
]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
all = [
    "auralith-data-pipeline[pdf,cloud,multimodal,quality,tracking,distributed,dev]",
]

[project.scripts]
auralith-pipeline = "auralith_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/AuralithAI/Auralith-Data-Pipeline"
Documentation = "https://github.com/AuralithAI/Auralith-Data-Pipeline#readme"
Repository = "https://github.com/AuralithAI/Auralith-Data-Pipeline"
Issues = "https://github.com/AuralithAI/Auralith-Data-Pipeline/issues"
Changelog = "https://github.com/AuralithAI/Auralith-Data-Pipeline/releases"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auralith_pipeline"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501", "B008", "C901", "B905"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
